Fix: better align maptiles

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,7 @@
 .result {
   color: greenyellow;
 }
+
+.matrix-display {
+  font-family: monospace;
+}
